Update old queries to match new DB structure. Minor refactoring, renaming