@@ -3,14 +3,13 @@ package lt.pavilonis.cmm.common.field;
 import com.vaadin.ui.ComboBox;
 import lt.pavilonis.cmm.App;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class EnumComboBox<T extends Enum> extends ComboBox<T> {
 
    public EnumComboBox(Class<T> clazz) {
       super();
-      List<T> enums = Arrays.asList(clazz.getEnumConstants());
+      List<T> enums = List.of(clazz.getEnumConstants());
 
       setItems(enums);
       setValue(enums.get(0));
