@@ -11,23 +11,19 @@ import lt.pavilonis.cmm.App;
 import lt.pavilonis.cmm.api.rest.scanner.Scanner;
 import lt.pavilonis.cmm.common.ListGrid;
 import lt.pavilonis.cmm.common.service.MessageSourceAdapter;
-import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-@SpringView(name = DashBoard.VIEW_NAME)
-public class DashBoard extends GridLayout implements View {
+@SpringView(name = Dashboard.VIEW_NAME)
+public class Dashboard extends GridLayout implements View {
 
    static final String VIEW_NAME = "dashboard";
 
-   private final DashBoardRepository repository;
+   private final DashboardRepository repository;
    private final MessageSourceAdapter messages;
 
-   @Autowired
-   public DashBoard(DashBoardRepository repository, MessageSourceAdapter messages) {
+   public Dashboard(DashboardRepository repository, MessageSourceAdapter messages) {
       super(2, 2);
       this.repository = repository;
       this.messages = messages;
@@ -41,13 +37,12 @@ public class DashBoard extends GridLayout implements View {
       ListGrid<ScannerEvents> grid = new ListGrid<ScannerEvents>(ScannerEvents.class) {
          @Override
          protected List<String> columnOrder() {
-            return Arrays.asList("scannerName", "scansToday", "scansTotal");
+            return List.of("scannerName", "scansToday", "scansTotal");
          }
 
          @Override
          protected Map<String, ValueProvider<ScannerEvents, ?>> getCustomColumns() {
-            return Collections.singletonMap("scannerName",
-                  item -> messages.get(Scanner.class, item.getScannerName()));
+            return Map.of("scannerName", item -> messages.get(Scanner.class, item.getScannerName()));
          }
       };
       grid.setCaption(App.translate(this, "scanStats"));
