@@ -3,8 +3,6 @@ package lt.pavilonis.cmm.school.user;
 import lt.pavilonis.cmm.api.rest.user.User;
 import lt.pavilonis.cmm.common.ListGrid;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 final class UserGrid extends ListGrid<User> {
@@ -15,16 +13,16 @@ final class UserGrid extends ListGrid<User> {
 
    @Override
    protected List<String> columnOrder() {
-      return Arrays.asList("cardCode", "firstName", "lastName", "role", "group");
+      return List.of("cardCode", "name", "organizationRole", "organizationGroup");
    }
 
    @Override
    protected void customize() {
-      sort("lastName");
+      sort("name");
    }
 
    @Override
    protected List<String> columnsToCollapse() {
-      return Collections.singletonList("cardCode");
+      return List.of("cardCode");
    }
 }
