@@ -1,12 +1,10 @@
 package lt.pavilonis.cmm.school.user.form;
 
-import com.google.common.collect.ImmutableMap;
 import com.vaadin.data.ValueProvider;
 import lt.pavilonis.cmm.api.rest.presence.PresenceTime;
 import lt.pavilonis.cmm.common.ListGrid;
 
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -22,12 +20,12 @@ final class UserFormViewPresenceTimeGrid extends ListGrid<PresenceTime> {
 
    @Override
    protected List<String> columnOrder() {
-      return Arrays.asList("date", "startTime", "endTime", "hourDifference");
+      return List.of("date", "startTime", "endTime", "hourDifference");
    }
 
    @Override
    protected Map<String, ValueProvider<PresenceTime, ?>> getCustomColumns() {
-      return ImmutableMap.of(
+      return Map.of(
             "startTime", item -> TIME_FORMAT.format(item.getStartTime()),
             "hourDifference", PresenceTime::getHourDifference,
             "endTime", item -> TIME_FORMAT.format(item.getEndTime())
